# backend/api.yaml
@@ -774,6 +774,20 @@ paths:
             application/json:
               schema:
                 $ref: '#components/schemas/Comments'
+
+  /comments/countComment:
+    get:
+      tags:
+        - Comment_blog
+      summary: get amount comment by Post
+      responses:
+        200:
+          description: Success
+          content:
+            schema:
+              type: string
+              # properties:
+
   /tag:
     get:
       tags:
@@ -951,7 +965,7 @@ paths:
   /images/{public_id}:
     delete:
       tags:
-          - Upload_Files
+        - Upload_Files
       summary: Delete an image by public ID
       parameters:
         - in: path
